wip : testing the note api
